@@ -1,4 +1,3 @@
 debian/transmission.xpm usr/share/pixmaps
 usr/share/icons
-usr/share/pixmaps
 usr/share/transmission/web
